Create new home module, add new pokedex home view, viewmodel, navigation, components, di module and tests. Modify pokemon list and move Color tu core.ui